# Pydemic

./: .gitignore  README.md  TODO.md  pyproject.toml
src/: cards.py  colors.py  exceptions.py  format.py  layouts.py  main.py  maps.py  pieces.py  roles.py  shared.py
src/pydemic/: __main__.py  argfuncs.py  cards.py  constants.py  display.py  exceptions.py  format.py  main.py  maps.py  pieces.py  roles.py  shared.py  state.py  version.py
tests/: test_argfuncs.py  test_cards.py  test_pieces.py  test_roles.py  utils.py
